--- a/INFO/2.md
+++ b/INFO/2.md
@@ -11,13 +11,11 @@ permalink: /FOSS/2/
 
 Rockrapids.fun will serve as the definitive digital guide to recreational activities, entertainment options, and special events in and around Rock Rapids, helping residents and visitors discover exciting ways to enjoy their time in the area. The platform will organize activities by category (outdoor recreation, family-friendly, dining experiences, nightlife) and by timeframe (today, this weekend, upcoming season) to help users quickly find relevant options. Integration with location data will allow visitors to plan efficient itineraries that maximize enjoyment based on proximity to Lake Okoboji or Sioux Falls attractions. Seasonal features will highlight weather-appropriate activities like winter sledding hills, summer water sports, spring hiking trails, and fall harvest festivals. The platform will showcase both recurring community events and one-time special occasions, ensuring users never miss out on fun opportunities. User-generated content including ratings, reviews, and photos will provide authentic perspectives on local experiences and help newcomers discover hidden gems.
 
-Check out the all of apps in the ecosystem, including:
+Check out the all of other apps in the ecosystem, including:
 
 - [Rockrapids.INFO](https://RockRapids.info) 
 
 - [Rockrapids.ART](https://RockRapids.art) 
-
-- [Rockrapids.FUN](https://RockRapids.fun) 
 
 - [Rockrapids.GUIDE](https://RockRapids.guide) 
 
