--- a/INFO/4.md
+++ b/INFO/4.md
@@ -11,7 +11,7 @@ permalink: /FOSS/4/
 
 Rockrapids.shop will create a dynamic digital showcase for the retail sector in Rock Rapids, highlighting special promotions, new merchandise arrivals, and unique shopping experiences to drive foot traffic to local businesses. The platform will celebrate the distinctive character of Main Street shopping through featured store profiles, merchant spotlights, and behind-the-scenes glimpses of local retail operations. Interactive event listings will promote shopping-adjacent experiences like wine tastings, sidewalk sales, holiday markets, and in-store demonstrations that transform retail into community entertainment. Push notifications for limited-time offers, flash sales, and seasonal clearances will help shoppers discover exceptional values while supporting local merchants. Curated shopping guides will help visitors discover themed retail experiences—from antique hunting to boutique fashion—that match their specific interests and enhance their Rock Rapids visit. User-generated content including reviews, photos, and shopping trip recaps will build an authentic community perspective on the retail landscape of Rock Rapids.
 
-Check out the all of apps in the ecosystem, including:
+Check out the all of other apps in the ecosystem, including:
 
 - [Rockrapids.INFO](https://RockRapids.info) 
 
@@ -20,8 +20,6 @@ Check out the all of apps in the ecosystem, including:
 - [Rockrapids.FUN](https://RockRapids.fun) 
 
 - [Rockrapids.GUIDE](https://RockRapids.guide) 
-
-- [Rockrapids.SHOP](https://RockRapids.shop)
 
 - [Rockrapids.STORE](https://RockRapids.store) 
 
