--- a/INFO/5.md
+++ b/INFO/5.md
@@ -11,7 +11,7 @@ permalink: /FOSS/5/
 
 Rockrapids.store will function as a LOCAL, for friends, service-after-the-sale digital marketplace and product showcase that connects consumers with merchandise available from Rock Rapids retailers and artisans, whether from physical Main Street locations or online platforms like Etsy. The platform will create a comprehensive product database of items available for purchase locally, supporting photographs, descriptions, pricing, and availability status to help shoppers find exactly what they're seeking. Integration with online storefronts will enable Rock Rapids crafters, artists, and small-batch producers to expand their reach while maintaining their connection to the local community. Curated collection features will highlight seasonally relevant items, gift ideas, locally produced specialties, and unique finds that distinguish Rock Rapids as a shopping destination. The platform will facilitate both in-store pickup and direct shipping options, allowing distant customers with connections to Rock Rapids to support local businesses. User wish lists and product alerts will notify shoppers when desired items become available or go on sale, enhancing the connection between local merchants and interested buyers.
 
-Check out the all of apps in the ecosystem, including:
+Check out the all of other apps in the ecosystem, including:
 
 - [Rockrapids.INFO](https://RockRapids.info) 
 
@@ -22,8 +22,6 @@ Check out the all of apps in the ecosystem, including:
 - [Rockrapids.GUIDE](https://RockRapids.guide) 
 
 - [Rockrapids.SHOP](https://RockRapids.shop)
-
-- [Rockrapids.STORE](https://RockRapids.store) 
 
 - [Rockrapids.WORK](https://RockRapids.work)
 
