--- a/INFO/6.md
+++ b/INFO/6.md
@@ -11,7 +11,7 @@ permalink: /FOSS/6/
 
 Rockrapids.work will connect job seekers in Rock Rapids with employment opportunities both locally and remotely, supporting economic vitality while enabling residents to build careers without leaving the community they love. The platform will maintain a comprehensive database of local job openings with detailed descriptions, qualification requirements, and application instructions from businesses throughout Rock Rapids and neighboring areas. Remote work opportunities that are compatible with Rock Rapids residency will be featured prominently, highlighting positions that allow people to enjoy small-town living while participating in the broader digital economy. Resources for job seekers will include resume building tools, interview preparation guides, and skill development opportunities specific to industries relevant to the region. The platform will spotlight success stories of Rock Rapids residents who have built satisfying careers locally or found innovative ways to work remotely while maintaining their connection to the community. Employer profiles will showcase local businesses as workplaces, highlighting their company culture, growth opportunities, and contributions to the Rock Rapids economy.
 
-Check out the all of apps in the ecosystem, including:
+Check out the all of other apps in the ecosystem, including:
 
 - [Rockrapids.INFO](https://RockRapids.info) 
 
@@ -24,8 +24,6 @@ Check out the all of apps in the ecosystem, including:
 - [Rockrapids.SHOP](https://RockRapids.shop)
 
 - [Rockrapids.STORE](https://RockRapids.store) 
-
-- [Rockrapids.WORK](https://RockRapids.work)
 
 - [Rockrapids.XYZ](https://RockRapids.xyz).
 
