--- a/INFO/1.md
+++ b/INFO/1.md
@@ -11,11 +11,9 @@ permalink: /FOSS/1/
 
 The rockrapids.art platform will showcase the diverse artistic talents of Rock Rapids residents, creating a vibrant digital gallery that celebrates creativity in all its forms—from traditional fine arts to unique crafts like pickling and meat smoking. Local artists will gain visibility through personalized profile pages featuring their work, background stories, and contact information for commissions or purchases. The platform will foster community connections by highlighting upcoming workshops, classes, and collaborative opportunities for artists and art enthusiasts alike. Seasonal spotlights will rotate to ensure all artists receive equal exposure regardless of medium or experience level. An interactive map will guide visitors to studio locations, public art installations, and craft workshops throughout Rock Rapids. The platform will serve as both a promotional tool for local talent and an educational resource that inspires creativity in future generations of Rock Rapids artists.
 
-Check out the all of apps in the ecosystem, including:
+Check out the all of other apps in the ecosystem, including:
 
 - [Rockrapids.INFO](https://RockRapids.info) 
-
-- [Rockrapids.ART](https://RockRapids.art) 
 
 - [Rockrapids.FUN](https://RockRapids.fun) 
 
