--- a/INFO/7.md
+++ b/INFO/7.md
@@ -8,9 +8,11 @@ permalink: /FOSS/7/
 *Volunteers are the XYZ, the people who fill the gaps, to everything work... this app is about efficiently coordinating and optimizing the engagement and satisfaction of volunteer time.*
 
 
-## Vision Statement Summary For This App
+## Vision Statement Summary For This Volunteers App
 
-Rockrapids.xyz will serve as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of service that strengthens the town's social fabric. The platform will showcase volunteer opportunities from various community organizations, clearly outlining the skills needed, time commitments, and positive impacts to help individuals find meaningful ways to contribute. Special recognition features will highlight exceptional volunteers through Volunteer of the Day/Month/Year programs, sharing their stories and contributions to inspire others in the community. Real-time tracking of community service projects will allow residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The platform will facilitate team formation for larger initiatives, connecting project leaders with potential volunteers and helping coordinate group efforts efficiently. Training resources and skill development opportunities will be featured to help volunteers build capabilities that benefit both their service activities and personal growth.
+Rockrapids.xyz will serve as the central hub for **volunteer engagement** in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of **voluntary service** that strengthens the town's social fabric. The platform will showcase **volunteer opportunities** from various community organizations, clearly outlining the exact skills needed, time commitments, and positive skill-building and engagement impacts to help individuals find meaningful ways to contribute. Special recognition features will highlight exceptional volunteers through Volunteer of the Day/Month/Year programs, sharing their stories and contributions to instigate more activity and inspire others in the community. 
+
+[Real-time tracking, analogous to GitHub's commitgraph](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-6.html) of **volunteer service** in community service projects will allow residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The platform will facilitate team formation for larger initiatives, connecting project leaders with potential **volunteers** and helping coordinate **volunteer** group projects efficiently and efficiently. Training resources and skill development opportunities will be featured to help **volunteers** build capabilities that benefit both their service activities and personal growth.
 
 Check out the all of other apps in the ecosystem, including:
 
